[MODORDERS-1333] Increase coverage